Small update to Retrieve Demo to support optional Folder parameter

--- a/apex-mdapi/src/pages/metadataretrieve.page
+++ b/apex-mdapi/src/pages/metadataretrieve.page
@@ -32,6 +32,7 @@
         <apex:actionPoller action="{!checkAsyncRequest}" interval="5" rerender="form" rendered="{!NOT(ISNULL(AsyncResult))}"/>
         <apex:pageBlock title="Layouts" rendered="{!AND(ISNULL(AsyncResult),ISNULL(MetaDataRetrieveZip))}">
             <apex:pageBlockButtons >
+                <apex:commandButton value="List" action="{!listMetadataItems}" />
                 <apex:commandButton value="Retrieve" action="{!retrieveMetadataItem}" />
             </apex:pageBlockButtons>
             <apex:pageBlockSection columns="1">
@@ -42,6 +43,10 @@
                         <apex:actionSupport event="onchange"  action="{!listMetadataItems}"/> 
                     </apex:selectList>
                 </apex:pageBlockSectionItem>
+                <apex:pageBlockSectionItem >
+                    <apex:outputLabel value="Metadata Folder" />
+                    <apex:inputText value="{!MetaDataFolder}" /> 
+                </apex:pageBlockSectionItem>                
                 <apex:pageBlockSectionItem >
                     <apex:outputLabel value="Metadata Item:" />
                     <apex:selectList size="1" value="{!MetaDataItem}" >
